--- a/index.html
+++ b/index.html
@@ -3,15 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<!-- todo add favicon -->
-		<!-- Favicons -->
-		<!--
-		<link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
-		<link rel="apple-touch-icon" type="image/x-icon" href="/img/apple-touch-icon-57x57-precomposed.png">
-		<link rel="apple-touch-icon" type="image/x-icon" sizes="72x72" href="/img/apple-touch-icon-72x72-precomposed.png">
-		<link rel="apple-touch-icon" type="image/x-icon" sizes="114x114" href="/img/apple-touch-icon-114x114-precomposed.png">
-		<link rel="apple-touch-icon" type="image/x-icon" sizes="144x144" href="/img/apple-touch-icon-144x144-precomposed.png"> -->
-
+		<link rel="icon" type="image/x-icon" href="todo.png"/>
 		<link rel="stylesheet" href="css/bootstrap.min.css" />
 		<link rel="stylesheet" href="css/sweetalert.css" />
 		<link rel="stylesheet" href="css/style.css" />
